# open-instrument-engineering

./: .gitignore  README.md  docker-compose.yml
.windsurf/rules/: open-instrument-dev.md
backend/: .env.example  README.md  pyproject.toml
backend/apps/: __init__.py
backend/apps/administration/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/administration/management/commands/: seed_admin_data.py
backend/apps/administration/migrations/: 0001_initial.py
backend/apps/core/: __init__.py  admin.py  models.py  urls.py  views.py
backend/apps/core_engineering/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/core_engineering/management/commands/: seed_demo_data.py
backend/apps/core_engineering/migrations/: 0001_initial.py
backend/apps/tenants/: __init__.py  admin.py  apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/apps/tenants/migrations/: 0001_initial.py
backend/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
docs/: DEVELOPMENT_ROADMAP.md  IMPLEMENTATION.md  PRD.md  SPECIFICATION.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/hierarchy/: HierarchyContext.tsx  HierarchySelector.tsx  HierarchyTree.tsx  index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  InstrumentsPage.tsx  LoginPage.tsx  StatusPage.tsx  TagDetailPage.tsx  index.ts
frontend/src/stores/: authStore.ts
(+6 files in other folders)
